fix h1 on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,10 @@ body {
     h1 {
         font-size: 80px;
         font-weight: 600;
+
+        @media screen and (max-width: 767px) {
+            font-size: 30px;
+        }
     }
 }
 
